# daisy1

./: .gitignore  Makefile  README.md  main.cpp  openocd.gdb
.github/workflows/: build.yml
dev/: convert_to_midi.py
dev/cppparse/: requirements.txt  run.py
dev/faust/: faust.py
dev/faust/compressor/: compressor.cpp
dev/faust/compressor-vec/: compressor.cpp  compressor.dsp
dev/faust/fverb2/: fverb2.dsp
dev/faust/fverb2-vec/: fverb2.cpp
dev/faust/fverb2-vec2/: simplify_faust.py
dev/faust/fverb3/: fverb3.dsp
dev/faust/lpf_diodeladder/: dsp.cpp  dsp.dsp
dev/faust/lpf_korg/: dsp.cpp  dsp.dsp
dev/faust/lpf_sallenkey/: dsp.cpp  dsp.dsp
dev/faust/oberheimlpf/: dsp.cpp  dsp.dsp
dev/faust/pitchshifter/: pitchshifter.cpp  pitchshifter.dsp
dev/faust/shimmer/: elysiera.dsp
dev/fverb2/: fverb2.cpp
dev/midicom/: main.go
lib/: balance2.cpp  balance2.h  chords.cpp  chords.h  circularbuffer.h  compressor.h  compressor_vec.cpp  compressor_vec.h  constants.h  crossfade.py  daisy_midi.h  fverb2.cpp  fverb2.h  fverb2_vec.cpp  fverb2_vec.h  lfo.cpp  lfo.h  loop.cpp  loop.h  lpf_biquad.cpp  lpf_biquad.h  lpf_diodeladder.h  lpf_korg.cpp  lpf_korg.h  lpf_oberheim.cpp  lpf_oberheim.h  lpf_sallenkey_onepole.cpp  lpf_sallenkey_onepole.h  mcp4728.cpp  mcp4728.h  noise.h  pitchshifter2.cpp  pitchshifter2.h  player.cpp  resampler.cpp  resampler.h  tape.cpp  tape.h  tapehead.cpp  tapehead.h  (+4 more)
rp2040/: CMakeLists.txt  Makefile  main.c
rp2040/lib/: WS2812.h  adenv.c  adenv.h  adsr.c  adsr.h  dac.h  encoder.c  encoder.h  i2c_slave.c  mcp4728.h  midi_comm.h  upload.sh  usb_descriptors.c  utils.h
rp2040/tests/adenv/: Makefile  main.c  plot.py
test/acrostic/: main.cpp
test/chords/: Makefile  main.cpp
test/expander/: main.cpp
test/interpolation/: Makefile  main.cpp  run.py
test/noise/: Makefile  main.cpp  plot.py
test/tape/: Makefile  main.cpp  run.py
